writing process part in virbd-linux blog

--- a/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
+++ b/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
@@ -1468,8 +1468,6 @@ umask xxx #直接设置ugo需要去掉的权限
 - SGID: 2
 - SBIT: 1
 
-
-
 ## Linux目录详解
 
 ​	Filesystem Hierarchy Standard(FHS)标准，规定每个特定的Linux目录下应该要放置什么样子的数据。FHS定义出三层目录：
@@ -1838,13 +1836,523 @@ file filename
 
 ![image-20211229161253678](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229161253678.png)
 
-# Linux进程管理
+# Linux进程
 
-Chapter 16、17、18
+## 例行性工作
+
+- 概念
+
+  周期性或定时需要完成的事情
+
+- Linux的常见例行性工作
+
+  - 进行日志文件的轮替(log rotate)
+
+  - 日志文件分析logwatch
+
+  - 新建locate数据库
+
+    对文件名数据库`/var/lib/mlocate/`文件进行更新
+
+  - whatis数据库建立
+
+    与man page相关的查询命令的数据库
+
+  - RPM软件日志文件的新建
+
+    软件变动后，文件名的排序、数据库的建立等等
+
+  - 删除临时文件
+
+    `tmpwatch`命令进行周期工作，删除软件运行中产生的临时文件
+
+  - 与网路服务有关的分析行为
+
+### 仅执行一次的工作调度
+
+#### 启动atd服务
+
+使用单一工作调度，需要开启atd服务
+
+```shell
+/etc/init.d/atd restart
+```
+
+#### 设置单一工作调度at
+
+![image-20220107094901902](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107094901902.png)
+
+- at的工作机理
+
+  将工作以文本文件的方式写入**`/var/spool/at/`**目录内，该工作便等待atd服务的取用与执行
+
+- at的限制相关文件
+
+  可以利用`/etc/at.allow`和`/etc/at.deny`进行at的使用限制
+
+  1. 先寻找`/etc/at.allow`文件，写入这个文件的用户才能使用at，不在文件中的用户不可以使用（即使没有写入`/etc/at.deny`文件，也不可以使用）
+  2. 如果`/etc/at.allow`文件不存在，就寻找`/etc/at.deny`这个文件，写在`/etc/at.deny`文件的用户不可以使用at，没有在`/etc/at.deny`的用户就可以使用at
+  3. 如果两个文件都不存在，那么只用root可以使用at命令
+
+- at的运行
+
+  - 输入`at`命令后，会进入at shell环境来让用户执行工作命令。所以，在at shell中最好使用绝对路径来执行相关命令。
+
+  - at的执行与终端机无关，所以所有的stdout和stderr都会传送到执行者的mailbox
+  - at具有“后台执行”功能
+
+#### 查询当前at工作调度
+
+使用`atq`命令即可
+
+```shell
+atq
+```
+
+#### 删除任务调度atrm
+
+```shell
+atrm [jobnumber] # jobnumber是atq命令查出的参数
+```
+
+#### CPU空闲时执行工作batch
+
+​	当**CPU工作负载**（与当前CPU进行切换的进程数量有关）小于0.8时，才进行任务的执行
+
+​	`batch`是利用at来进行命令的执行，命令使用与at相似
+
+![image-20220107101119636](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107101119636.png)
+
+### 循环执行的工作调度
+
+#### 启动crond服务
+
+​	使用`crond`系统服务来控制的，该服务Linux是默认启动的。
+
+​	`crond`服务的最低检测限制是“分钟”，所以服务会**每分钟读取`/etc/crontab`和`/var/spool/cron`的数据内容**。
+
+​	设置完任务后，如果没有被执行，可以重启crond服务。
+
+#### 设置用户循环工作调度crontab
+
+![image-20220107101927894](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107101927894.png)
+
+- crontab的工作机理
+
+  将工作以文本文件的方式写入**`/var/spool/cron/`**目录内，该工作便等待crond服务的取用与执行
+
+  与此同时，cron执行的每项工作都被记录到`/var/log/cron`日志文件中
+
+- crontab的限制相关文件
+
+  与at类似，这里的文件是`/etc/cron.allow`、`/etc/cron.deny`。
+
+- cron工作的设置格式
+
+  ![image-20220107102546981](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107102546981.png)
+
+  输入`crontab -e`就会进入`vi`的编辑界面。每项工作一行，可以分为6个字段：
+
+  ![image-20220107102656700](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107102656700.png)
+
+  设置参数的一些辅助字符：
+
+  ![image-20220107102743019](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107102743019.png)
+
+- 查询用户目前的crontab内容
+
+  ```
+  crontab -l
+  ```
+
+- 删除任务
+
+  删除全部工作使用
+
+  ```shell
+  crontab -r
+  ```
+
+  删除部分工作，用`crontab -e`编辑文件删除
+
+#### 设置系统的循环工作调度
+
+​	通过编辑`/etc/crontab`文件，即可设置系统例行性工作调度。
+
+![image-20220107103439790](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107103439790.png)
+
+### 唤醒停机期间的工作任务
+
+- `anacron`
+
+  `anacron`是以天为单位或开机后立刻仅`anacron`操作，会去检测停机期间应该进行但没有进行的`crontab`任务，并将该任务执行一遍，然后`anacron`就会自动停止。
+
+  ![image-20220107103817261](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107103817261.png)
+
+- 运行机理
+
+  `anacron`读取时间记录文件(timestamps)，分析现在的时间与时间记录文件所记载的上次执行`anacron`的时间，两者比较后若发现有区别，那就是在某些时刻没有进行`crontab`。此时`anacron`开始执行未进行的`crontab`任务。
+
+- 与`crontab`的关系
+
+  ![image-20220107110721695](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107110721695.png)
+
+- `/etc/anacrontab`
+
+  ![image-20220107110816360](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107110816360.png)
+
+## 进程
+
+### 概念
+
+​	在Linux系统中，**触发任何一个事件时，系统都会将它定义成为一个进程，并且给予这个进程一个ID，即为PID，同时依据触发这个进程的用户与相关属性关系，给予PID一组有效的权限设置**.
+
+​	执行一个程序或命令，就可以触发事件而得到PID。程序一般是放置在磁盘中，通过用户的执行来触发。触发后会加载到内存中成为一个个体，那就是**进程**。为了操作系统可管理这个进程，进程有执行者的权限属性等参数，并包括进程所需要的脚步用户数据、文件等，最后操作系统再给予一个PID。系统就是通过PID判断进程是否具有权限进行某项工作的。
+
+![image-20220107111812811](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107111812811.png)
+
+​	进程衍生出来的其他进程一般也会沿用这个进程的相关权限。
+
+### 子进程与父进程
+
+​	比如在bash下执行其他命令，这些命令有时候也会被触发成为PID，这个即为子进程，原来的bash环境则为父进程。
+
+![image-20220107112113431](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107112113431.png)
+
+- 子进程与父进程的关系通过`PPID`参数判断。`ps -l`命令输入后：![image-20220107112314853](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107112314853.png)
+
+- 子进程与父进程的调用
+
+  在Linux中称为`fork-and-exec`流程。
+
+  父进程以fork的方式产生一个一模一样的子进程，被复制出来的子进程再以exec的方式来执行实际要进程的进程，最终成为一个子进程的存在。
+
+  ![image-20220107112954832](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107112954832.png)
+
+### 后台进程设置
+
+#### 后台运行进程
+
+- 丢入bash后台使用`&`
+
+  ```shell
+  command &
+  ```
+
+  执行后会给出工作号码和command所触发的PID，如：
+
+  ```
+  [1] 8400
+  ```
+
+- 后台的输出信息处理
+
+  使用数据流重定向，将数据流重定向到指定文件
+
+  ```shell
+  command > outfilename 2>&1 &
+  ```
+
+#### 暂停当前进程并丢到后台
+
+如正在使用vim编辑文件，临时离开的情况
+
+在vim的一般模式下，使用`[Ctrl]+Z`，终端会输出类似下列输出
+
+```
+[1]+ Stopped
+```
+
+[1]表示工作号码，`+`表示最近一个被丢进后台的工作（相对应，`-`表示最近第二个被丢进后台的工作），Stopped表示进程工作状态处于暂停（相对应，`Running`表示进程处于后台运行状态）
+
+#### 查看后台进程jobs
+
+![image-20220107133908349](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107133908349.png)
+
+#### 后台进程拿到前台fg
+
+![image-20220107134131976](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107134131976.png)
+
+`fg`后不接参数，默认取的是带有`+`表示的工作
+
+#### 后台进程状态变为运行
+
+​	`[Ctrl]+Z`是变为后台暂停运行，`bg`是让后台暂停的进程变为运行状态。使用方法同fg
+
+```shell
+bg %jobnumber
+```
+
+#### 重启/删除后台进程kill
+
+![image-20220107134621042](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107134621042.png)
+
+对于signal，主要了解1、9、15的用法。
+
+另外，kill后面接的数字**默认是PID**，如果是bash的工作控制，则要使用`%jobnumber`形式。
+
+#### 脱机管理
+
+​	如果是远程ssh登录Linux，单单使用`&`将进程后台运行，在会话结束时，进程也会关闭。需要使用`nohup`将进程放入系统后台，而不是bash后台
+
+![image-20220107135342163](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107135342163.png)
+
+注意，**nohup并不支持bash内置命令，所以后面接的命令必须要是外部命令**。
+
+### 进程管理
+
+#### 进程查看
+
+- **某一时间点**系统进程查看ps
+
+  ![image-20220107135940956](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107135940956.png)
+
+- 仅查看自己的bash相关进程`ps -l`
+
+  ![image-20220107140029482](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107140029482.png)
+
+  1. 进程标志和权限说明
+     - 4表示进程的权限为root
+     - 1表示此子进程仅可fork而无法实际执行(exec)
+  2. 进程的状态
+     - R表示进程正在运行中
+     - S表示进程正在睡眠，可以被唤醒
+     - D表示阻塞，通常可能在等待I/O
+     - T表示停止状态
+     - Z表示“僵尸”状态，进程已经终止，但却无法被删除至内存外
+  3. 进程被哪个UID拥有
+  4. 进程的PID
+  5. 进程的父进程PID（PPID）
+  6. CPU使用率，单位为百分比
+  7. PRI/NI和CPU，表示进程被CPU所执行的优先级。数值越小代表越快被CPU执行
+  8. ADDR/SZ/WCHAN，和内存有关
+     - ADDR是kernel function，指出该进程在内存的哪个部分，如果是running进程，会显示`-`
+     - SZ表示进程用掉多少内存
+     - WCHAN表示目前进程是否在运行中，如果是running进程，会显示`-`
+  9. TTY表示登录者的终端机位置，若为远程登录则使用动态终端接口(pts/n)。
+  10. TIME表示进程实际花费CPU运行的时间
+  11. CMD，表示造成此程序的触发进程的命令为何
+
+- 查看系统所有进程`ps aux`
+
+  ![image-20220107142511658](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107142511658.png)
+
+  1. USER，进程属于哪个用户账号
+  2. PID
+  3. %CPU，进程使用的CPU资源百分比
+  4. %MEM，进程所占用的物理内存百分比
+  5. VSZ，进程使用掉的虚拟内存量，单位KB
+  6. RSS，进程占用的固定的内存量，单位KB
+  7. TTY，进程的终端机位置，网络连接显示pts/n，和终端机无关则显示`?`
+  8. STAT，进程状态，
+  9. START，进程被触发启动的时间
+  10. TIME，进程实际使用CPU的时间
+  11. COMMAND，进程的实际命令
+
+- 僵尸进程
+
+  - 原因
+
+    该进程应该已经执行完毕，或是因故应该要终止了，但是该进程的父进程却无法完整将该进程结束，从而进程一直存在内存中
+
+  - `ps`相关命令查询时，在COMMAND后还有`<defunct>`字样，即表示为僵尸进程
+
+  - 处理僵尸进程一般需要杀掉其父进程，或者reboot
+
+- **动态**查看进程变化`top`
+
+  ![image-20220107143601079](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107143601079.png)
+
+- 进程相关性查看`pstree`
+
+  ![image-20220107143831020](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107143831020.png)![image-20220107143841556](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107143841556.png)
+
+  可以看出，**所有进程都是依附在init进程下面。**
+
+  ![image-20220107144454140](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107144454140.png)
+
+#### 进程重启、关闭、删除
+
+依然使用前面说过的`kill`命令：`kill -signal PID`
+
+还可以使用`killall -signal command`
+
+![image-20220107145029150](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107145029150.png)![image-20220107145039002](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107145039002.png)
+
+场景的`signal`如下：
+
+![image-20220107144728687](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107144728687.png)
+
+### 进程的执行顺序
+
+​	CPU具体执行哪个进程需要考虑进程的优先执行序(Priority)和CPU调度
+
+![image-20220107145552380](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107145552380.png)
+
+- 进程的PRI和NI
+
+  进程的PRI即为优先级的意思，该值越低，越优先执行。
+
+  但是**PRI由内核动态调整，用户无法直接调整PRI值**，所以通过NI（nice）值来调整。最终的CPU执行优先级为：
+
+  ````
+  PRI(final) = PRI(kernel) + nice
+  ````
+
+  nice的值可调范围为`-20~19`
+
+  - root可以调整其他人的nice值
+  - 一般用户仅可以调整自己的nice，且范围为`0~19`
+  - 一般用户仅可以把nice值增大
+  - **nice值可以在子父进程之前传递**
+
+- 设置程序初始nice值
+
+  ![image-20220107150142119](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107150142119.png)
+
+- 调整进程nice值
+
+  ![image-20220107150226734](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107150226734.png)
+
+### 特殊文件与程序
+
+#### 具有SUID/SGID权限的命令执行状态
+
+SUID的权限会生效是由于具有该权限的程序被触发
+
+比如passwd执行后，就具有root的权限。触发passwd后，会取得一个新的进程与PID，该PID产生时通过SUID来给予该PID特殊的权限设置。
+
+![image-20220107152830305](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107152830305.png)
+
+#### `/proc/*`目录的意义
+
+所有的进程存在内存中，内存中的数据又是写入到`/proc/*`目录下。
+
+![image-20220107153425758](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107153425758.png)
+
+#### 查找正在使用某文件的程序fuser
+
+![image-20220107153550031](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107153550031.png)
+
+#### 列出被进程所打开的文件名lsof
+
+![image-20220107153702734](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107153702734.png)
+
+#### 找到正在执行的进程的PID
+
+![image-20220107153753496](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107153753496.png)
+
+## 系统资源管理
+
+### 查看内存使用情况free
+
+![image-20220107151350735](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107151350735.png)
+
+### 查看内核相关信息uname
+
+![](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107151432730.png)
+
+### 查看系统启动时间和负载uptime
+
+![image-20220107151542516](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107151542516.png)
+
+### 跟踪网络netstat
+
+![image-20220107151704286](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107151704286.png)
+
+比较常用的有，查看哪些进程启动了网络连接/占用网络端口
+
+![image-20220107151859230](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107151859230.png)
+
+### 分析内核产生的信息dmesg
+
+特别是开机检测硬件的一些信息等。
+
+```shell
+dmesg | more
+```
+
+### 检测系统资源变化vmstat
+
+可以检测CPU/内存/磁盘输入输出状态等
+
+![image-20220107152254151](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107152254151.png)![image-20220107152308103](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107152308103.png)
+
+## SELinux
+
+### 概念
+
+​	Security Enhanced Linux之意，是在进行程序、文件等权限设置依据的一个内核模板。由于网路服务也是程序，刚好也能够控制网络服务能否访问系统资源。
+
+​	依据进程的所有者与文件资源的`rwx`权限来决定有无访问文件系统能力的方式，被称为“自主访问控制”（Discretionary Access Control，DAC）。在某些情况会有问题，如root具有最高的权限、用户可以取得进程来更改文件资源的访问权限等
+
+​	为了避免上述问题发生，SELinux导入强制访问控制（Mandatory Access Control，MAC）的方式。可以**针对特定的进程与特定的文件资源来进行权限的控制。将权限控制的主体，从用户变成 了进程**。
+
+### 运行模式
+
+​	SELinux的目标是：该进程能否读取文件资源
+
+![image-20220107160035341](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107160035341.png)
+
+- 主体
+
+  SELinux主要想管理的就是进程
+
+- 目标
+
+  SELinux想访问的是文件系统
+
+- 策略
+
+  SELinux会依据某些服务来制定基本的访问安全性策略。主要有两个：
+
+  - targeted：针对网络服务限制较多，针对本机限制较少。是默认策略
+  - strict：完整的SELinux限制，限制方面较为严格
+
+- 安全上下文
+
+  主体与目标的安全上下文必须一致才能顺利访问。
+
+  安全上下文有点类似`rwx`。进程的安全上下文存在内存中，文件的安全上下文放置到文件的inode内。
+
+  使用`ls -Z`查看：
+
+  ![image-20220107160341505](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107160341505.png)
+
+  以`:`隔开为3个字段
+
+  1. 身份标识
+
+     - root，标识root的账号身份
+     - system_u，标识系统程序，通常就是进程
+     - user_u，标识一般用户账号的身份
+
+  2. 角色
+
+     表明这个数据是程序、文件资源还是用户
+
+     - object_r：代表文件或目录等文件资源
+     - system_r：进程，一般用户
+
+  3. 类型
+
+     在文件资源上称为type，在进程上称为domain。
+
+     **主体与目标之间是否具有可以读写的权限与进程的domain及文件的type有关**。
+
+     > 如httpd_exec_t的domain，可以访问httpd_sys_content_t这个type的文件
+
+### SELinux启动、关闭和查看
+
+
+
+## 服务
+
+​	常驻在内存当中的进程都负责一些系统所提供的功能以服务用户各项任务，因此这些常驻进程就会被称为服务。
 
 # Linux系统使用
 
-Chaper 22、23
+Chapter 22、23
 
 # Shell
 
