finish process in virbd-linux blog

--- a/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
+++ b/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
@@ -2288,7 +2288,7 @@ dmesg | more
 
 ​	为了避免上述问题发生，SELinux导入强制访问控制（Mandatory Access Control，MAC）的方式。可以**针对特定的进程与特定的文件资源来进行权限的控制。将权限控制的主体，从用户变成 了进程**。
 
-### 运行模式
+### 运行原理
 
 ​	SELinux的目标是：该进程能否读取文件资源
 
@@ -2315,26 +2315,26 @@ dmesg | more
 
   安全上下文有点类似`rwx`。进程的安全上下文存在内存中，文件的安全上下文放置到文件的inode内。
 
-  使用`ls -Z`查看：
+  进程的安全上下文使用`ps -Z`查看，文件的安全上下文使用`ls -Z`查看：
 
   ![image-20220107160341505](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220107160341505.png)
 
   以`:`隔开为3个字段
 
-  1. 身份标识
+  1. 身份标识(user)
 
      - root，标识root的账号身份
      - system_u，标识系统程序，通常就是进程
      - user_u，标识一般用户账号的身份
 
-  2. 角色
+  2. 角色(role)
 
      表明这个数据是程序、文件资源还是用户
 
      - object_r：代表文件或目录等文件资源
      - system_r：进程，一般用户
 
-  3. 类型
+  3. 类型(type)
 
      在文件资源上称为type，在进程上称为domain。
 
@@ -2344,11 +2344,277 @@ dmesg | more
 
 ### SELinux启动、关闭和查看
 
+#### SELinux查看
 
+- 查看运行状态
+
+  并不是所有的Linux distribution都支持SELinux。SELinux支持三种（状态）模式：
+
+  - enforcing，强制模式，代表SELinux正在运行，且已经正确开始限制domain/type
+  - permissive，宽容模式，点SELinux正在运行，不过仅会有警告信息并不会实际限制domain/type的访问。**这种模式可以用来作为SELinux的调试
+  - disabled，关闭状态，SELinux没有运行
+
+  使用`getenforce`进行SELinux状态查看
+
+  ![image-20220110124621230](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110124621230.png)
+
+- 查看策略等信息
+
+  使用`sestatus`进行SELinux状态查看。
+
+  **SELinux的配置文件是`/etc/selinux/config`**
+
+  ![image-20220110125019761](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110125019761.png)
+
+  效果如图：
+
+  ![image-20220110125038013](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110125038013.png)
+
+#### SELinux启动与关闭
+
+- SELinux的运行状态、策略等更改时，需要重新启动SELinux
+
+- 启动SELinux，需要编辑配置文件`/etc/selinux/config`
+
+  ![image-20220110163820510](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110163820510.png)
+
+  配置完后，在内核文件查询是否已经开启。**如果要开启SELinux，不可以在kernel行出现selinux=0的字样。**
+
+  ![image-20220110164047471](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110164047471.png)
+
+- SELinux模式在enforcing和permissive之间切换`setenforce`
+
+  ![image-20220110164317413](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110164317413.png)
+
+  注意，`setenforce`无法在Disabled模式下面进行切换。
+
+### 安全上下文的设置和查看
+
+安全上下文的配置文件目录是`/etc/selinux/targeted/`
+
+#### 安全上下文的查看
+
+- 进程的安全上下文使用`ps -Z`查看
+
+  ![image-20220110165137536](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110165137536.png)
+
+- 文件的安全上下文使用`ls -Z`查看
+
+  ![image-20220110165153206](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110165153206.png)
+
+httpd这个进程拥有的httpd_t这个domain去读取index.html文件时，就会看是否和文件的type匹配。
+
+#### 修改文件的安全上下文`chcon`
+
+![image-20220110165330344](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110165330344.png)
+
+#### 文件的默认安全上下文的查询与修改`semanage`
+
+![image-20220110172110502](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110172110502.png)
+
+#### 文件的安全上下文恢复默认值`restorecon`
+
+![image-20220110165413096](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110165413096.png)
+
+### SELinux的策略与规则管理
+
+策略相关的配置文件目录是`/etc/selinux/targeted/`
+
+#### 策略详细信息查询seinfo
+
+策略的信息包括：**所有类型**、**所有角色**、**所有身份标识**、**所有规则（布尔值）**。
+
+![image-20220110170352796](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110170352796.png)
+
+#### 详细规则（布尔值）查询sesearch
+
+![image-20220110171422652](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110171422652.png)
+
+#### 布尔值状态查询getsebool
+
+![image-20220110171749959](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110171749959.png)
+
+#### 布尔值关闭或开启setsebool
+
+![image-20220110171825521](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110171825521.png)
+
+### SELinux的输出信息
+
+SELinux在发生错误时，有几个服务会记录这些信息
+
+- `setroubleshoot`，将错误信息写入`/var/log/messages`
+
+  设置服务开启：
+
+  ![image-20220110165755103](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110165755103.png)
+
+  发生错误时，可以查看：
+
+  ```shell
+  cat /var/log/messages | grep setroubleshoot
+  ```
+
+- `audit`，将详细数据写入`/var/log/audit/audit.log`
+
+  与`setroubleshoot`不同的是，`auditd`会将所有信息记录下来，不仅仅是错误信息。
+
+  设置服务开启：
+
+  ![image-20220110170059951](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110170059951.png)![image-20220110170108678](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110170108678.png)
+
+  可以使用`audit2why`进行文件数据分析
+
+  ![image-20220110170211945](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110170211945.png)
+
+  
 
 ## 服务
 
-​	常驻在内存当中的进程都负责一些系统所提供的功能以服务用户各项任务，因此这些常驻进程就会被称为服务。
+### 概念
+
+​	常驻在内存当中的进程都负责一些系统所提供的功能以服务用户各项任务，因此这些常驻进程就会被称为服务(service)。执行service的程序或进程称之为**daemon**。
+
+#### 服务的分类
+
+**按照daemon启动与管理的方式分：**
+
+- stand_alone，可自行单独启动服务
+
+  自行启动，不必通过其他机制的管理
+
+  值存在内存中，响应速度较快
+
+- super_daemon，通过这个特殊的daemon统一管理其他服务
+
+  当没有客户端的请求时，各项服务都未启动，等到有请求时，super daemon才唤醒相对应的服务。当请求结束后，服务也会关闭并释放系统资源。
+
+  ![image-20220110173218216](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110173218216.png)
+
+  有两种具体的工作状态：
+
+  - 多线程
+
+    super deamon同时负责多个进程
+
+  - 单线程
+
+    super deamon一个一个处理请求
+
+  ![image-20220110173450041](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110173450041.png)
+
+​	
+
+**按照daemon工作状态的方式分：**
+
+- signal-control
+
+  通过信号来管理，有请求进来会立即启动去处理
+
+- interval-control
+
+  每个一段时间主动执行某项工作。
+
+#### daemon的命令规则
+
+服务名称后，通常会加一个`d`，{xxx}d。
+
+### 服务的端口号
+
+在配置文件**/etc/services**中，写了服务与端口号的对应关系。格式为：
+
+`<daemon name> <port/数据包协议> <服务的说明>`
+
+![image-20220110173927162](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110173927162.png)
+
+### 服务的启动
+
+#### 服务的脚本文件
+
+Linux distribution提供了服务的shell script文件来就进行启动和配置。
+
+- `/etc/init.d/*`，启动脚本放置处
+- `/etc/sysconfig/*`，服务的初始化环境配置文件
+- `/etc/xinetd.conf, /etc/xinetd.d/*`，super daemon配置文件
+- `/etc/*`，各服务的配置文件
+- `/var/lib/*`，各服务产生的数据库
+- `/var/run/*`，各服务的程序PID记录处
+
+#### Stand_alnoe的/etc/init.d/*的启动
+
+- `/etc/init.d/*`下文件名直接启动
+
+- `service`命令启动
+
+  ![image-20220110174804482](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110174804482.png)
+
+  service分析daemon后的参数，再去`/etc/init.d/*`取正确的服务来执行
+
+#### 由Super_daemon管理的启动
+
+​	**super_daemon是由`xinetd`这个进程实现的**，它管理的服务的配置文件在`/etc/xinetd.d/*`下面，通过编辑服务文件的`disable`字段来启动。
+
+```shell
+disable=yes #关闭服务
+disable=no  #开启服务
+```
+
+​	**xinetd管理的服务，有个默认的配置文件`xinetd.conf`**。当启动的服务，没有设置配置文件里面的值时，则该配置文件的值就作为默认值。
+
+![image-20220110175640107](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110175640107.png)
+
+#### 设置开启立即启动服务
+
+- 管理系统服务默认开启开启启动chkconfig
+
+  ![image-20220110181651492](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110181651492.png)
+
+- 图形界面管理模式ntsysv
+
+  Red Hat系统独有，通过图像界面管理服务
+
+  ![image-20220110181743827](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110181743827.png)
+
+#### 自定义服务
+
+定义好shell script文件后，放入`/etc/init.d/`下面。文件有些格式要求：
+
+`chkconfig:[runlevels][启动顺序][停止顺序]`
+
+![image-20220110182231354](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110182231354.png)
+
+然后还是使用`chkconfig`。
+
+![image-20220110181931860](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110181931860.png)
+
+### 服务的查看
+
+​	前面在`Linux进程-系统资源管理-跟踪网络netstat`已经介绍过。查看端口即可查看相关服务。
+
+### 服务的防火墙管理
+
+​	防火墙，是针对源IP或域进行允许或拒绝的设置，以决定该连接是否能够成功实现连接的一种方式。
+
+​	**任何以xinetd管理的服务都可以通过`/etc/hosts.allow和/etc/hosts.deny`来设置防火墙**。通过TCP数据包分析出IP和Port（TCP Wrappers）并搭配这两个文件，就能决定连接是否可以进入主机。**服务必须支持TCP Wrappers的功能，才能受这两个配置文件的限制**。
+
+- 查询程序是否支持TCP Wrappers
+
+  ```shell
+  ldd $ (which service1 service2 ...)
+  ```
+
+  若有`libwrap.so`这个函数库文件，即支持TCP Wrappers.
+
+- 配置文件语法
+
+  ![image-20220110180554365](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110180554365.png)
+
+- hosts.allow的优先级高于host.deny
+
+- 配置文件第一和第二字段的特殊符号：
+
+  ![image-20220110180741836](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220110180741836.png)
+
+- 可以配合TCP Wrappers软件，配置文件做更复杂的操作
 
 # Linux系统使用
 
