finish virbd-basic-linux blog

--- a/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
+++ b/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
@@ -293,6 +293,24 @@ tags: 操作系统OS
 
 ![image-20211229145645115](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229145645115.png)
 
+## Linux文件结构和磁盘挂载
+
+- 文件结构
+
+​	Linux使用**目录树**结构，以根目录（/）为主，然后向下呈现分枝状的目录结构的一种文件结构。
+
+​	如何结合目录树的架构与磁盘内的数据，这个时候就牵扯到“挂载”（mount）问题。
+
+![image-20211222142446218](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211222142446218.png)
+
+- 磁盘挂载
+
+  利用一个目录当进入点，将磁盘分区的数据放置在该目录下，即**进入该目录就可以读取该分区**。这个操作成为**挂载**，进入点的目录成为**挂载点**。
+
+  如下图，当数据放置在/home内的各个目录时，数据放置在partition2分区；当数据放置在其他目录时，数据放置在partiton1目录。
+
+![image-20211222142819962](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211222142819962.png)
+
 ## Linux磁盘分区
 
 ### 磁盘分区文件
@@ -339,7 +357,7 @@ tags: 操作系统OS
 
 - 扩展分区最多只能有一个
 - 能够被格式化后作为数据访问的分区为主分区和逻辑分区，扩展分区无法格式化
-- 逻辑分区数量依操作系统不同，在Linux系统中，IDE硬盘最多59个逻辑分区（5-63号），SATA硬盘有11个逻辑分区（5号到15号）
+- 逻辑分区数量依操作系统不同，在Linux系统中，IDE硬盘最多59个逻辑分区（5-63号），SATA硬盘有11个逻辑分区（5号到15号）。
 
 ### 建议的磁盘规划
 
@@ -361,8 +379,6 @@ tags: 操作系统OS
 
 ## Linux开机流程
 
-Chapter 20
-
 ### 正常开机
 
 1. BIOS，开机主动执行的程序，会识别第一个可开机的设备（硬盘）。
@@ -372,6 +388,180 @@ Chapter 20
    - 载入内核文件：直接指向可开机的程序区段来开始操作系统
    - 转交其他loader：将引导加载功能转交给其他loader负责。
 4. 内核文件，内核文件工作，开始操作系统的功能。
+   - 内核开始检测硬件与加载驱动程序
+   - 内核主动调用init进程，init进程取得run-level信息
+   - init执行`/etc/rc.d/rc.sysinit`文件来准备软件执行的操作环境
+   - init执行run-level的各个服务的启动
+   - inti执行`/etc/rc.d/rc.local`文件
+   - init执行终端机模拟程序`mingetty`来启动login进程，等待用户登录
+
+#### BIOS
+
+​	系统加载BIOS（Basic Input Output System）程序，来加载CMOS的信息，从而获得主机的各项**硬件配置**。包括：
+
+- CPU与接口设备的通信频率
+- 启动设备的查找顺序
+- 硬盘的大小与类型
+- 系统时间
+- 总线信息
+- 接口设备的IO地址
+- IRQ信息等等
+
+之后，BIOS继续进行**开机自检、硬件检测的初始化、配置PnP（即插即用设备）、定义出可启动的设备顺序**。后面就准备通过MBR开始读取启动设备的数据了。
+
+#### MBR
+
+​	在启动设备的第一扇区，里面包含**可以处理内核文件加载问题的引导装载程序，Boot Loader**。
+
+​	BIOS是通过硬件的INT13中断功能读取MBR。
+
+#### Boot Loader
+
+​	每种操作系统都有自己的Boot Loader，在自己磁盘分区的引导扇区(boot sector)。在安装Winodows的时候，会默认将windows在引导扇区的boot loader拷贝一份并安装到系统的MBR；在安装Linux的时候，可以选择装，也可以不装。
+
+​	通过boot Loader提供的**菜单功能**，选择**内核文件进行加载**，同时可以配合**loader的控制权转交的功能实现多重引导**。但是，Windows的loader默认不具有控制权转交的功能。**所以，在多系统的时候，一定要先装Windows再装Linux**。
+
+​	在具体boot loader执行过程中分为两个阶段：
+
+- 执行boot loader主程序
+
+  MBR通常仅安装了boot loader的最小主程序，并没有安装loader的相关配置文件
+
+- 主程序加载配置文件
+
+  通过boot loader加载所有配置文件（一般在/boot下面）与相关的环境参数文件（文件系统定义与主要配置文件menu.lst）
+
+**现在常见的boot loader一般是grub**，与grub有关的文件都放置到`/boot/grub`中。
+
+![image-20220111144346433](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220111144346433.png)
+
+其中最重要的配置文件是`menu.lst`文件。
+
+#### 加载内核检测硬件
+
+​	Linux会将内核解压缩到内存中，并利用内核的功能，开始测试与驱动各个周边设备（存储设备、CPU、网卡、声卡等）。然后，内核**重新检测一次硬件（不一定使用BIOS的硬件检测信息）**，此时，**内核正式开始接管BIOS的工作。**
+
+​	内核文件被加载后，一般放置在`/boot`目录下。在`/boot/modules`内，有很多**内核模块**（可以想想成驱动程序，如USB、SATA等）可以供Linux内核动态加载，该目录一定和根目录放置在同一分区！启动过程中**内核必须挂载根目录（此时，以只读方式挂载），这样才能内核模块提供加载驱动程序的功能**。
+
+> 若Linux安装在SATA里面，会出现这样的矛盾：
+>
+> ​	内核不认识SATA接口，需要加载SATA程序，不然没办法挂载根目录；
+>
+> ​	但是SATA驱动程序在`/boot/modules`里面，不挂载根目录，无法读取这个目录的驱动程序。
+>
+> 这里，还有个**虚拟文件系统（InitialRAM Disk，一般文件名为`/boot/initrd`）**可以解决这个问题。它通过boot loader加载到内存解压缩后，在内存中仿真成一个根目录，来加载启动过程中需要的内核模块。等模块都载入完成后，帮助内核重新调用`/sbin/init`来继续启动流程。
+>
+> **如果是ext2/ext3文件系统的IDE接口的磁盘，则不需要`initrd`就可以直接被内核加载。**
+
+![image-20220111133612615](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220111133612615.png)
+
+#### init进程
+
+​	内核加载完成、硬件检测完成和驱动程序加载后，内核主动调用第一个进程`/sbin/init`。主要的功能是准备软件执行的环境，包括：**系统的主机名、网络设置、语系处理、文件系统格式及其它服务的启动**。`init`进程的配置文件为**`/etc/inittab`**。
+
+- 重要的配置项`run level`
+
+  根据有无网络与有无X Window划分为7个等级，来规定系统使用不同的服务来启动。
+
+  - 0：halt，系统直接关机
+  - 1：single user mode，单用户维护模式，用在系统出问题时的维护
+  - 2：Multi user without NFS，多用户模式，但无NFS服务
+  - 3：Full multi user mode，完整含有网络功能的纯文本模式
+  - 4：unused，系统保留功能
+  - 5：X11，与run level3类型，但使用X Window模式加载
+  - 6：reboot，重新启动
+
+- `/etc/inittab`文件结构
+
+  ![image-20220111134232187](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220111134232187.png)
+
+  配置语法：
+
+  `[设置选项]:[run level]:[init的操作行为]:[命令选项]`
+
+  1. 设置选项。最多四个字符，代表init的工作选项
+
+  2. run level，可能会配置多个等级
+
+  3. init的操作行为，主要如下：
+
+     ![image-20220111134943106](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220111134943106.png)
+
+  4. 选项命令，即可以进行的一些script命令
+
+- init的处理流程
+
+  配置文件也是从上至下一行一行读取。
+
+  - 取得默认run level
+  - 使用`/etc/rc.d/rc.sysinit`进行系统初始化，它里面的脚本主要配置文件是`/etc/sysconfig/*`
+  - 如果此时run level是5，则加载`/etc/rc.d/rc5`
+  - 设置好`[Ctrl]+[Alt]+[Del]`组合键
+  - 设置不断电系统的pf，pr两种机制
+  - 启动mingetty的6个终端机tty1~tty6
+  - 最终以`/etc/X11/perfdm -nodaemon启动图像界面`
+
+#### `/etc/rc.d/rc.sysinit`进行系统初始化
+
+主要是设置各种系统环境，有以下：
+
+- 取得网络环境与主机类型
+
+  读取网络配置文件`/etc/sysconfig/network`，取得主机名与默认网关等网络环境
+
+- 测试与挂载内存设备`/proc`及USB设备`/sys`
+
+- 决定是否启动SELinux
+
+- 启动系统的随机数生成器
+
+- 设置终端机字体
+
+- 设置显示于启动过程找那个的欢迎界面
+
+- 设置系统时间与时区
+
+  读取`/etc/sysconfig/clock`的设置值
+
+- 接口设备的检测与PnP参数测试
+
+  根据内核在启动时的检测结果`/proc/sys/kernel/modprobe`来进行检测
+
+- 用户自定义模块的加载
+
+  读取`/etc/sysconfig/modules/*.moduels`
+
+- 加载内核的相关设置
+
+  读取`/etc/ssyctl.conf`
+
+- 设置主机名与初始化电源管理模块
+
+- 初始化软件磁盘阵列
+
+  读取`/etc/mdadm.conf`
+
+- 初始化LVM的文件系统
+
+- 以fsck检验磁盘文件系统
+
+- 进行磁盘配额quota的转化
+
+- 重新以可读写模式挂载系统磁盘
+
+- 启动quota
+
+- 启动系统伪随机数生成器
+
+- 清除启动过程中的临时文件
+
+- 启动相关信息加载到`/var/log/dmesg`文件中
+
+#### /etc/rc.d/rcN启动系统服务
+
+​	内部定义了启动时需要启动的服务信息，并有一定的启动先后顺序。
+
+​	特别是最后一行，加载`/etc/rc.d/rc.local`文件，是用户自定义的开机启动程序
 
 ### 多重引导
 
@@ -383,27 +573,7 @@ Chapter 20
 
 ​	loader只会认识自己的系统分区内的可开机内核文件和其他loader，loader可以直接指向或是间接将管理权转交另一个管理程序。
 
-## Linux文件结构和磁盘挂载
-
-- 文件结构
-
-​	Linux使用**目录树**结构，以根目录（/）为主，然后向下呈现分枝状的目录结构的一种文件结构。
-
-​	如何结合目录树的架构与磁盘内的数据，这个时候就牵扯到“挂载”（mount）问题。
-
-![image-20211222142446218](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211222142446218.png)
-
-- 磁盘挂载
-
-  利用一个目录当进入点，将磁盘分区的数据放置在该目录下，即**进入该目录就可以读取该分区**。这个操作成为**挂载**，进入点的目录成为**挂载点**。
-
-  如下图，当数据放置在/home内的各个目录时，数据放置在partition2分区；当数据放置在其他目录时，数据放置在partiton1目录。
-
-![image-20211222142819962](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211222142819962.png)
-
-
-
-## Linux启动
+## Linux登录方式
 
 ​	在Linux默认登录模式中，主要分为两种：
 
@@ -414,6 +584,12 @@ Chapter 20
 
 - [Ctrl] + [Alt] + [F1] ~ [F6]：文字界面登录tty1~tty6终端
 - [Ctrl] + [Alt] + [F7]：图形界面桌面
+
+## Linux内核
+
+​	内核文件是个压缩文件，解压缩后才加载到内存中。内核文件相关位置：
+
+![image-20220111142448466](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220111142448466.png)
 
 ## Linux命令行和简单命令
 
@@ -2616,9 +2792,107 @@ disable=no  #开启服务
 
 - 可以配合TCP Wrappers软件，配置文件做更复杂的操作
 
-# Linux系统使用
+# Linux应用程序
 
-Chapter 22、23
+- 源码
+
+  Linux的软件几乎都是经过GPL的授权，所以每个软件几乎均提供源代码。
+
+  由于有些源码文件较大，所以一般软件的源码都是打包和压缩为Tarball文件，扩展名一般为`*.tar.gzip`或`*.tar.bz2`。里面的文件通常包含：
+
+  - 源代码文件
+  - 检测程序文件，可能为configure或config等文件名
+  - 本软件的建议说明与安装说明，INSTALL或README
+
+- Linux的软件
+
+  软件的命名也有一定的规范：
+
+  ![image-20220111152129217](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220111152129217.png)
+
+  软件的安装和升级主要有两种模式：
+
+  - Red Hat系统（含Fedora/CentOs系列）开发的RPM软件管理机制与yum在线更新模式
+  - Debian使用的dpkg软件管理机制与APT在线更新模式等
+
+## RPM
+
+全名是RedHat Package Manager，有如下**优点**：
+
+- RPM内含已经编译过的程序与设置文件等数据，可以让用户免除重新编译的困扰
+- RPM在被安装之前，会先检查系统的硬盘容量、操作系统版本等，可避免文件被错误安装
+- RPM文件本身提供软件版本信息、依赖属性软件名称、软件用途说明、软件所含文件等信息，便于了解软件
+- RPM管理的方式使用**数据库记录PRM文件的相关参数**，便于升级、删除、查询与验证。
+
+### 软件默认安装路径
+
+- 安装软件完毕后，软件相关信息被写入`/var/lib/rpm/`目录下的数据库文件中
+
+- 软件内的文件的位置：
+
+  ![image-20220111152654789](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220111152654789.png)
+
+  一般情况：如果是应用软件：`/usr/local`；如果是系统相关：`/usr/sbin`,`/usr/bin`等。具体可以使用`rpm -ql softwarename`查看。
+
+### RPM安装软件
+
+安装软件必须先取得**root权限**。
+
+![image-20220111152831791](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220111152831791.png)
+
+其他的参数：
+
+![image-20220111152942318](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220111152942318.png)
+
+### RPM升级与更新
+
+![image-20220111153209580](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220111153209580.png)
+
+**不过一般是使用yum来进行软件的升级更新**。
+
+### RPM软件查询
+
+查询使用RPM安装的软件的信息。
+
+本质是去查询`/var/lib/rpm/`目录下的数据库文件。
+
+![image-20220111153252618](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220111153252618.png)
+
+### RPM卸载软件与重建数据库
+
+卸载的时候，很容易发送软件依赖属性导致无法删除的情况。所以删除的时候一定要从**最上往下删除**。
+
+```shell
+rpm -e softwarename
+```
+
+在RPM安装、删除、升级等过程中，可能会破坏`/var/lib/rpm/`目录下的数据库文件。可以进行数据库重建：
+
+```shell
+rpm --rebuilddb
+```
+
+## YUM
+
+​	yum是通过分析RPM的标题数据后，根据各软件的相关性制作出属性依赖时的解决方案，然后可以自动处理软件的依赖属性问题，以解决软件安装或删除与升级问题。
+
+### yum的查询软件
+
+![image-20220111154027037](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220111154027037.png)
+
+### yum安装和升级软件
+
+![image-20220111154109937](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220111154109937.png)
+
+### yum删除软件
+
+```shell
+yum remove softwarename
+```
+
+### yum的配置文件
+
+
 
 # Shell
 
