--- a/_posts/2021-06-17-LeetCode刷题和算法.md
+++ b/_posts/2021-06-17-LeetCode刷题和算法.md
@@ -8,5 +8,5 @@ tags: 数据结构和算法
 
 <img src="/../assets/leetcode/shot.png" style="zoom:50%;" />
 
-[附件下载](/../assets/files/leetcode.docx)
+[附件下载](/../assets/files/leetcode+算法知识整合.docx)
 
