append sth to virbd-net-linux blog

--- a/_posts/2022-01-12-《鸟哥的LINUX私房菜_服务器篇》笔记.md
+++ b/_posts/2022-01-12-《鸟哥的LINUX私房菜_服务器篇》笔记.md
@@ -9,13 +9,15 @@ tags: 操作系统OS
 
 ## 计算机联网结构
 
-![image-20220112163724225](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220112163724225.png)
+本书的局域网结构
+
+![image-20220113160210457](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113160210457.png)
 
 - 网络接口
 
   利用软件设计的网络接口，主要是提供网络地址IP
 
-  一张网卡至少可以搭配一个以上的网络接口
+  **一张网卡至少可以搭配多个网络接口**
 
   每部主机内部也有一个内部接口，**loopback（lo）**循环测试接口。
 
@@ -27,11 +29,11 @@ tags: 操作系统OS
 
 - 网关（route/gateway)
 
-  具有两个以上的网络接口，可以连接两个以上不同的网段的设备。如IP分享器
+  具有两个以上的网络接口，可以连接两个以上不同的网段的设备。
+  
+- IP分享器
 
-### 局域网网络架构
-
-
+  具有网关、防火墙、DHCP等功能的设备。
 
 ## TCP/IP的数据链路层
 
@@ -138,13 +140,13 @@ tags: 操作系统OS
 
   在私有IP后加上NAT服务即可连上Internet
 
-### 路由
+### 路由（网关相关）
 
 - 两个主机在两个网段时，不能直接IP广播通信，只能借助路由器
 
 ![image-20220112173211096](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220112173211096.png)
 
-- 在主机查询路由表时，没有符号的路由，就会把IP包送去预设路由器（默认网关，default gatway）
+- 在主机查询路由表时，没有符合的路由，就会把IP包送去预设路由器（**默认网关，default gatway，大部分为广播地址，具体需要问管理员**）
 
 - 观察主机路由`route`命令
 
@@ -186,3 +188,208 @@ tags: 操作系统OS
 
     Interface（网络接口），表示要去本机要去这个Destination需要走的网络接口
 
+# Linux连接Internet
+
+chapter 6
+
+## 局域网常见布线规划
+
+局域网（Local Area Network， LAN)的Linux服务器的布线方式有多种，这些方式有下面几个前提条件：
+
+- 较小空间局域网，如一个办公室
+- 以一个switch为中心的星形联机架构
+
+- 假设仅有一条ADSL线对外联机的情况下
+
+### Linux直接联网-与PC同地位
+
+此时如果ADSL是多IP的（可以拨接2-8个IP）的情况，可以使用这个模式。
+
+![image-20220113153802132](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113153802132.png)
+
+每个节点可以直接通过私有IP进行联机
+
+每个节点可以自行通过ADSL拨接连接Internet
+
+局限性：
+
+- 每个节点相对独立，不好管理
+- 这是一个没有防火墙的环境！
+- 内外部网络没有明确的分开
+
+### Linux直接联网-与一般PC分开网域
+
+如果有多个Public IP，可以将Linux和其他节点的网域分开。
+
+![image-20220113154314575](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113154314575.png)
+
+LAN的每个节点可以直接通过私有IP进行联机
+
+LAN的每个节点必须通过IP分享器（一个类似网关的设备）连接到Internet，IP分享器也可以设置一些简单的防火墙规则。
+
+LAN内的节点方便维护
+
+### Linux直接联网-让Linux直接管理LAN
+
+没有IP分享器的时候，可以让Linux充当。此时**Linux必须具备两张网卡，一个对外，一个对内**。
+
+![image-20220113155125601](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113155125601.png)
+
+Linux可以作为内网对外的防火墙使用。
+
+维护内网简单，但是Linux一旦挂点，整个内网就不能对外联机。
+
+**比较推荐！**
+
+### Linux放在防火墙后-让Linux使用Private IP
+
+依然使用IP分享器充当防火墙的角色
+
+![image-20220113155531262](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113155531262.png)
+
+## 连接
+
+### 网络卡
+
+网络卡的装置有自己的代号，默认的网卡是eth0，第二张网络卡为eth1，依次类推。
+
+#### 网卡硬件信息查看dmesg
+
+```shell
+dmesg | grep -in eth
+```
+
+![image-20220113161442057](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113161442057.png)
+
+e1000是网卡核心模块的名字。
+
+#### 确认网卡是否被载入lsmod\modinfo
+
+```shell
+lsmod | grep 1000
+```
+
+![image-20220113161738021](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113161738021.png)
+
+### Internet参数设置
+
+有多种上网方式可以进行设置。
+
+#### 网络相关配置文件
+
+- 参数配置文件
+
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113161923962.png" alt="image-20220113161923962" style="zoom:80%;" />
+
+- 相关命令脚本
+
+  - `/etc/init.d/network restart`
+
+    重启整个网络参数！读取上述配置文件，并恢复系统默认的参数
+
+  - `ifup/ifdown eth0`
+
+    启动或关闭某个网络接口。
+
+#### 手动设定固定IP
+
+![image-20220113162617115](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113162617115.png)
+
+- IP相关参数
+
+  ![image-20220113162734504](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113162734504.png)
+
+  注意，其中`GATEWAY`是整个系统的默认网关，在有多个网卡的时候，只需要一个网卡的配置文件设置即可。
+
+- DNS
+
+  ![image-20220113163402840](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113163402840.png)
+
+  使用`dig`命令可以测试是否设置正确
+
+  ![image-20220113163514976](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113163514976.png)
+
+- hostname
+
+  ![image-20220113163652825](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113163652825.png)
+
+  设置完后一定要reboot（重启）。
+
+#### 自动取得IP
+
+利用DHCP功能，从DHCP服务器（比如IP分享器）取得IP。
+
+![image-20220113164150770](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113164150770.png)
+
+文件里面的其他参数都可以用#注释掉，特别是**GATEWAY参数一定不能设置**。
+
+### 通过无线网的连接设置
+
+无线网络（Wireless LAN，WLAN)的机制非常多，场景的WIFI是IEEE 802.11b标准。
+
+![image-20220113165122560](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113165122560.png)
+
+#### 硬件
+
+WLAN中有两个重要的网络设备：无线基地台（Wireless Access Point，AP）和无线网卡。
+
+AP本身就是一个IP分享器，一个对外连接Internet，一个对内接收无线网卡的数据。**常见的AP设备如TP-Link**。
+
+AP一般需要做一些限制，来保护内部的WLAN，常见的就是连接AP时需要验证密钥。主要是两个参数：
+
+- ESSID/SSID
+
+  AP的名字
+
+- 密码
+
+  密码有2中常见的加密方式
+
+  - WPA/WPA2
+  - WPA-PSK/WPA2-PSK(一般用这个)
+
+#### 配置文件
+
+也在`/etc/sysconfig/network-scripts`下面
+
+#### 查看无线网卡状态iwconfig
+
+![](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113165815458.png)
+
+然后可以继续使用`modinfo`来查看加载状况。
+
+#### 启动无线网卡
+
+```shell
+ifconfig netcardid up
+```
+
+或
+
+```
+ifup wlname
+```
+
+#### 侦测AP
+
+```shell
+iwlist netcardid scan
+```
+
+![image-20220113170427618](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220113170427618.png)
+
+利用上述得到的参数，修改配置文件，在`/etc/Wireless`目录下，比较麻烦。
+
+
+
+# Linux网络常用指令
+
+chapter 5
+
+# Linux网络安全
+
+Chapter 7 8 9
+
+# Linux远程联机服务
+
+chapter 11
